--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
   },
   "dependencies": {
     "@vueuse/core": "^9.1.0",
+    "source-map-resolve": "^0.6.0",
     "vue": "^3.2.37"
   },
   "devDependencies": {
